Reorganized files Langs.json